fixed overlapping problem with contacts block

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,5 +30,7 @@
 
   body {
     @apply bg-[var(--background)] text-[var(--foreground)] transition-colors duration-300;
+
+    overflow-x: hidden;
   }
 }
